k8s/20deployment.yaml
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: website
  namespace: yeo
  labels:
    app: website
spec:
  replicas: 1
  selector:
    matchLabels:
      app: website
  template:
    metadata:
      labels:
        app: website
        name: website
    spec:
      terminationGracePeriodSeconds: 60
      containers:
      - image: yeospace/website
        name: website
